--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
-[package]
-name = "yet_another_raytracer"
-version = "0.1.0"
-authors = ["XuZiWei <xuziwei100@gmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+    "raytracer",
+]
 
-[dependencies]
-rand = "0.3" 
-image = "0.23.14"
-threadpool = "1.8.1"
-indicatif = "0.16.2"
+exclude = [
+    "raytracer_codegen",
+]
