--- a/raytracer/Cargo.toml
+++ b/raytracer/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["XuZiWei <xuziwei100@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rand = "0.3" 
+tobj = "4.0.0"
+rand = "0.3"
 image = "0.23.14"
 threadpool = "1.8.1"
 indicatif = "0.16.2"
